Fix footer not fitting to bottom

--- a/themes/osuosl/assets/css/style.css
+++ b/themes/osuosl/assets/css/style.css
@@ -101,6 +101,16 @@ pre {
   word-wrap: break-word;
 }
 
+.layout-container {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+#content {
+  flex: 1 1 auto;
+}
+
 .mobile-menu-container {
   display: none;
 }
